landing page for the weather app done

--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,57 @@
-body {
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,600;1,400;1,600&display=swap');
+
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+html {
+  font-size: 62.5%;
+}
+
+body {
+  font-size: 1.6rem;
+  font-family: 'Poppins', sans-serif;
+  background-color: #020207;
+  width: 100%;
+  height: 100%;
+  color: #d3d8d5;
+}
+
+.App {
+  padding: 2rem;
+}
+
+.welcome {
+  margin-top: 10rem;
+}
+
+.welcome__img {
+  display: block;
+  margin: 0 auto;
+}
+
+.welcome-text {
+  text-align: center;
+  /* background: red; */
+  /* padding: */
+}
+
+.welcome-text__heading {
+  line-height: 1.1;
+  margin: 2rem 0;
+}
+
+.cta {
+  display: block;
+  width: 100%;
+  margin-top: 5rem;
+  padding: 1.5rem;
+  background-color: #57c4ff;
+  border: none;
+  border-radius: 0.5rem;
+  font-size: 1.6rem;
+  color: #d3d8d5;
+  font-weight: 600;
 }
