--- a/src/index.css
+++ b/src/index.css
@@ -25,6 +25,11 @@ a {
 
 .App {
   padding: 5rem 4rem;
+  max-width: 400px;
+  margin: 2rem auto;
+  /* border: 1px solid #9e6c45; */
+  border-radius: 0.5rem;
+  box-shadow: 0.1rem 0.1rem 1rem #1f48a7;
 }
 
 .welcome {
